Reapply changes for upstream merge (test)